--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "dto-mapper": "^0.2.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
