--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/jwt-simple": "^0.5.33",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
@@ -23,8 +25,11 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "dto-mapper": "^0.2.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.25.3",
